--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.CryptoTracker"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.nuncamaria.learningandroidarchitecture.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.CryptoTracker">
             <intent-filter>
